tests/integration/snapshots/test_invalid_test_file_syntax.stderr.txt
[ROOT]/tests/test.test.tolk.test[LINE]: error: expected `;`, got `a`
   3 |                 let a = 10;
     |                     ^
